fix(grid): set grid-gap to zero px

--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ h1 {
   .square-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(30%, 1fr));
-    grid-gap: 10px;
+    grid-gap: 0px;
   }
   
   .square {
